--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -114,6 +114,6 @@
         {%- sections 'footer-group' -%}
       {%- endif -%}
     </main>
-    <script defer="defer" scr="{{ 'app.js' | asset_url }}"></script>
+    {{ 'app.js' | asset_url | script_tag }}
   </body>
 </html>
