--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -61,6 +61,7 @@
 
     <script type="module" src="{{ 'vendor.min.js' | asset_url }}"></script>
     <script type="module" src="{{ 'theme.js' | asset_url }}"></script>
+    <script src="https://kit.fontawesome.com/1589047438.js" crossorigin="anonymous"></script>
 
     {{ content_for_header }}
 
