--- a/sections/testimonial-media.liquid
+++ b/sections/testimonial-media.liquid
@@ -171,6 +171,26 @@
                   <p class="{{ block.settings.heading_tag }}">{{ block.settings.title }}</p>
                 {%- endif -%}
 
+                <div class="ratings-section">
+                  <ul class="ratings">
+                    <li class="rate">
+                      <i class="fa-solid fa-star"></i>
+                    </li>
+                    <li class="rate">
+                      <i class="fa-solid fa-star"></i>
+                    </li>
+                    <li class="rate">
+                      <i class="fa-solid fa-star"></i>
+                    </li>
+                    <li class="rate">
+                      <i class="fa-solid fa-star"></i>
+                    </li>
+                    <li class="rate">
+                      <i class="fa-solid fa-star"></i>
+                    </li>
+                  </ul>
+                </div>
+
                 {{- block.settings.content -}}
 
                 {%- if block.settings.link_text != blank -%}
