gift card template edit and menu links

--- a/sections/faq.liquid
+++ b/sections/faq.liquid
@@ -1,12 +1,12 @@
 {%- if section.blocks.size > 0 -%}
   {%- assign color_scheme_hash = section.settings.color_scheme.settings.background_gradient | default: section.settings.color_scheme.settings.background | md5 -%}
 
-  <div class="section-spacing color-scheme color-scheme--{{ section.settings.color_scheme.id }} color-scheme--bg-{{ color_scheme_hash }} {% if section.settings.separate_section_with_border %}bordered-section{% endif %}">
+  <div. class="section-spacing color-scheme color-scheme--{{ section.settings.color_scheme.id }} color-scheme--bg-{{ color_scheme_hash }} {% if section.settings.separate_section_with_border %}bordered-section{% endif %}">
     <div class="container container--md">
       <div class="section-stack">
         {%- render 'section-header', subheading: section.settings.subheading, heading: section.settings.title, content: section.settings.content -%}
 
-        <div class="faq">
+        <div id="{{ section.settings.section-id }}" class="faq">
           {%- assign categories_blocks = section.blocks | where: 'type', 'category' -%}
 
           {%- if section.settings.show_categories and categories_blocks.size > 0 -%}
@@ -88,6 +88,11 @@
     "groups": ["header", "custom.overlay"]
   },
   "settings": [
+    {
+      "type": "text",
+      "id": "section-id",
+      "label": "Section ID"
+    },
     {
       "type": "color_scheme",
       "id": "color_scheme",
