google search console tag

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -2,6 +2,8 @@
 
 <html class="no-js" lang="{{ request.locale.iso_code }}" dir="{% render 'direction' %}">
   <head>
+    <meta name="google-site-verification" content="P465Nm9HOiXUnFDvg8RwxJ14sggkkBPty_zojIlwCyw" />
+    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height, minimum-scale=1.0, maximum-scale=5.0">
 
