--- a/assets/app.css
+++ b/assets/app.css
@@ -1,3 +1,16 @@
+.content-over-media:before {
+  content: "";
+  background: rgba(0, 0, 0, 0);
+  border-radius: inherit;
+  z-index: 1;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
 a.stiky-btn {
   border: 2px solid;
   padding: 10px;
