--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -106,7 +106,7 @@
           {%- render 'icon' with 'hamburger', class: 'header__nav-icon' -%}
         </button>
 
-            <a href="#" class="md:hidden mobile-stiky-btn">GET GIFTS</a>
+            <a href="https://dearlybeloved.gifts/collections/gifts" class="md:hidden mobile-stiky-btn">GET GIFTS</a>
 
 
         {%- if menu.links.size > 0 and section.settings.layout != 'drawer' -%}
