--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -40,3 +40,8 @@ a.stiky-btn {
     font-size: 15px;
     margin-right: 2px;
   }
+  
+  .badge--on-sale {
+    background: #2FDDB6;
+    color: #0B1E25;
+  }
